# guitar-practice

./: .gitignore  README.md  main.py  pyproject.toml
guitar_practice/: guitar_string.py  main.py
tests/: test_guitar_string.py
