[tool.poetry]
name = "guitar-practice"
version = "0.1.0"
description = "Suite of scripts to support guitar practice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
multipledispatch = "^1.0.0"
pyhamcrest = "^2.1.0"
survey = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-main = "guitar_practice.main:prompt_user"
